trunk/Archive2/9c/f902509ee943c9/output
main.cpp:1:1: error: C++ requires a type specifier for all declarations
main()
^~~~
1 error generated.
